Add unit tests for ClientAccessControlSqlRepository, ClientAccessControlController, and ClientAccessControlServiceImpl
- Implement tests for CRUD operations in ClientAccessControlSqlRepository.
- Create tests for REST endpoints in ClientAccessControlController, covering bulk create, get all, get by client ID, update, and delete.
- Add service layer tests for ClientAccessControlServiceImpl, including validation, event publishing, and handling of duplicates and exceptions.